spring-boot-legacy/k8s/network-policy-api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-policy
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {} # Allow from Ingress Controller (usually in different namespace)
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: auth-service
        - podSelector:
            matchLabels:
              app: payment-service
        - podSelector:
            matchLabels:
              app: merchant-service
        - podSelector:
            matchLabels:
              app: vault-service
        - podSelector:
            matchLabels:
              app: fraud-service
        - podSelector:
            matchLabels:
              app: notification-service
      ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 8084
        - protocol: TCP
          port: 8085
        - protocol: TCP
          port: 8086
        # Allow DNS
        - ports:
            - protocol: UDP
              port: 53
            - protocol: TCP
              port: 53
